building the restaurant activity

--- a/app/src/main/res/layout/activity_restaurants.xml
+++ b/app/src/main/res/layout/activity_restaurants.xml
@@ -19,6 +19,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/listview"
         android:layout_below="@+id/locationTextView"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        />
 
 </RelativeLayout>
